# Wordle-Evolutionary-Algorithm

./: .gitignore  README.md  baselines.py  benchmark.py  ga_solver.py  pyproject.toml  targets.txt  wordle.py
tests/: test_baselines.py  test_benchmark.py  test_ga_solver.py  test_wordle.py
